--- a/styles.css
+++ b/styles.css
@@ -376,7 +376,7 @@ li::before {
   align-items: center;
   border-radius: 1%;
   padding: 1.25rem;
-  box-shadow: 16px 16px hsl(0deg 0% 0% / 0.15);
+  box-shadow: 8px 16px 16px hsl(0deg 0% 0% / 0.25);
 }
 
 .PlumberOne h3,
@@ -450,7 +450,7 @@ li::before {
   .ReviewsContainer {
     grid-template-columns: repeat(1, minmax(10%, 1fr));
     gap: 10%;
-    margin: 0 100rem;
+    
   }
 }
 
@@ -593,10 +593,16 @@ li::before {
   
   .ReviewCount {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     color: white;
     font-size: 1rem;
-    margin: 1rem 8.5rem;
+    margin: 0 25%;
+    width: 100%;
+  }
+
+  .Rating {
+    margin: 0%;
   }
 
   .PageThree{
@@ -616,14 +622,16 @@ li::before {
   }
   
   .ReviewsContainer {
-    grid-template-columns: repeat(3, 1fr);
-    margin:  1rem 2rem 1rem 2rem;
+    grid-template-columns: repeat(1, 1fr);
+    margin:  1.5rem;
     gap: 5%;
     width: 90%;
     height: fit-content;
+    align-items: center;
+    justify-content: center;
   }
   .ReviewOne .ReviewDescription, .ReviewTwo .ReviewDescription, .ReviewThree .ReviewDescription{
-    font-size: .8rem;
+    font-size: 1.5rem;
   }
 
   .ReviewOne,
@@ -635,22 +643,14 @@ li::before {
     align-items: center;
   }
 
-.ReviewDescription {
-    font-size: 1rem; 
-}
 
 .ReviewName {
-  font-size: 0.875rem; 
+  font-size: 2rem; 
 }
 
   
 
   .anchorButton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  
     background-color: #258dc6;
     color: white;
     text-decoration: none;
@@ -659,14 +659,13 @@ li::before {
     font-size: 2rem; 
     font-weight: bold;
     border: none;
-    width: 50%;
+   
     max-width: 400px; 
     text-shadow: 1px 1px black;
     cursor: pointer;
-    position: relative;
-    z-index: 10; 
+  
     line-height: 2rem; 
-    margin-top: 5rem; 
+    margin: 5rem auto;
 }
 
 .anchorButton .br {
@@ -678,16 +677,18 @@ li::before {
 }
 
   .PageThreeContent {
-    grid-template-columns: repeat(3, 1fr);
-    margin:  1rem 2rem 1rem 2rem;
-    gap: 5%;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: 400px;
+    margin:  1rem 2rem 0rem 2rem;
+    gap: 2%;
     width: 90%;
     height: fit-content;
   }
   
-   .PlumberOne, .PlumberTwo, .PlumberThree {
-    height: 90%;
-  }
+.anchorButton {
+  margin-top: 10rem;
+}
 
 
   .PlumberOne h4, .PlumberTwo h4, .PlumberThree h3 {
@@ -703,13 +704,13 @@ li::before {
   }
 
   .PlumberOne p, .PlumberTwo p, .PlumberThree p {
-    font-size: 1rem;
+    font-size: 1.5rem;
     text-align: center;
+    margin: 5%;
   }
 
-  .ReviewCount{
-    margin: 1rem 16rem;
-    width: 100%;
+  .GReview {
+    align-self: flex-end;
   }
 
   .FootDecor {
