--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,7 @@ li::before {
 
 .PageTwo {
   background-color: #08439d;
+  width: 100%;
 }
 
 .ReviewCount {
@@ -236,9 +237,12 @@ li::before {
 
 .ReviewsContainer {
   display: grid;
+  align-items: center;
+  align-self: center;
+  justify-content: center;
   grid-template-columns: repeat(3, minmax(10%, 1fr));
   gap: 10%;
-  margin: 0 10rem;
+  margin: 0 auto;
 }
 
 .ReviewsContainer .GReview {
@@ -445,6 +449,13 @@ li::before {
   width: 25%;
 }
 
+
+.footimg {
+  margin-top: 1rem;
+  width: 10%;
+
+}
+
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px) {
   .ReviewsContainer {
@@ -475,7 +486,9 @@ li::before {
   .Navigation {
     flex-direction: column; 
     align-items: flex-start; 
-    padding: 1rem; 
+   
+    width: 100%;
+    margin: 1rem auto;
   }
 
   .mainlogo {
@@ -484,8 +497,8 @@ li::before {
   }
 
   .NavHeadliner {
-    font-size: 1.2rem; 
-    margin: .5rem auto;
+    font-size: 1rem; 
+    margin: 1rem auto;
     text-align: center; 
     margin-bottom: 0;
   }
@@ -511,6 +524,7 @@ li::before {
   .PageOne {
     background-size: cover; 
     width: 100%;
+    margin: 1rem auto;
   }
 
   .PageOneTitles {
@@ -519,6 +533,15 @@ li::before {
     margin-left: 0;
     text-align: center; 
   }
+
+.PageOneList {
+
+  padding: 0 5%;
+}
+
+.BotContactForm {
+  width: 50%;
+}
 
   .ContactForm h1,
 .BotContactForm h1 {
@@ -587,6 +610,9 @@ li::before {
     padding: .5rem;
   }
 
+
+
+
   .PageTwo {
     width: 100%;
   }
@@ -597,8 +623,9 @@ li::before {
     align-items: center;
     color: white;
     font-size: 1rem;
-    margin: 0 25%;
+    margin: 0 auto;
     width: 100%;
+    
   }
 
   .Rating {
@@ -655,7 +682,7 @@ li::before {
     color: white;
     text-decoration: none;
     border-radius: 0.8rem;
-    padding: 1rem 2rem; 
+    padding: 2rem 2rem; 
     font-size: 2rem; 
     font-weight: bold;
     border: none;
@@ -680,7 +707,7 @@ li::before {
     align-items: center;
     justify-content: center;
     grid-template-columns: 400px;
-    margin:  1rem 2rem 0rem 2rem;
+    margin: 1rem auto;
     gap: 2%;
     width: 90%;
     height: fit-content;
@@ -719,17 +746,22 @@ li::before {
     align-items: center;
     width: 100%;
 
-    font-size: .5rem;
+    font-size: 1rem;
   }
 
   .PageFour h1 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
 
   .FootDecor .ButtonContainer {
     display: none;
   }
   
+  .footimg {
+    margin-top: 1rem;
+    width: 40%;
+  
+  }
 
 }
 
