--- a/styles.css
+++ b/styles.css
@@ -332,7 +332,7 @@ li::before {
   justify-content: center;
   align-items: center;
   text-align: center;
-
+font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: #258dc6;
   color: white;
   text-decoration: none;
